# swarm-rs

./: Cargo.toml  README.md
examples/: function_calling.rs
src/: lib.rs  swarm.rs  types.rs
