[package]
name = "swarm-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[example]]
name = "function_calling"
path = "examples/function_calling.rs"

[dependencies]
async-openai = "0.25.0"
futures = "0.3.31"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.0", features = ["full"] }
